--- a/classement.css
+++ b/classement.css
@@ -105,3 +105,9 @@ footer .liens_mentions{
         font-size: 1.2em;
     }
 }
+
+@media screen and (min-width: 1280px) {
+    header img {
+        margin-top:2%;
+    }
+}
