--- a/sondage.css
+++ b/sondage.css
@@ -245,3 +245,11 @@ footer .liens_mentions{
         font-size: 1.2em;
     }
 }
+
+@media screen and (min-width: 1280px) {
+    header img {
+        margin-top:2%;
+    }
+
+
+}
