--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header a{
     font-weight: bold;
 }
 
+
 main h1{
     font-weight: bold;
     text-align: center;
@@ -59,6 +60,11 @@ main h2{
     border: 3px solid #1d428a;
     background-color: rgba(255,255,255,0.5);
     text-transform: uppercase;
+}
+
+main a {
+    text-decoration: none;
+    color: #000000;
 }
 
 .rouge {
@@ -176,6 +182,9 @@ footer .liens_mentions{
 
 @media screen and (min-width: 1280px){
 
+    header img {
+        margin-top:2%;
+    }
 
     main h2{
         font-size: 2.5em;
@@ -199,4 +208,6 @@ footer .liens_mentions{
     .img_main{
         height: 50em;
     }
+
+
 }
