--- a/style.css
+++ b/style.css
@@ -8,9 +8,28 @@ body{
 
 header{
     background-color: #000000;
-    justify-content: space-around;
     text-align: center;
     padding-bottom: 5%;
+    display: flex;
+}
+
+.fa-bars{
+    font-size: 50px;
+    margin-left: 5%;
+    margin-top: 8%;
+
+}
+
+.hide1 i{
+    font-size: 50px;
+    margin-left: 18px;
+    margin-top: 25px;
+}
+
+header img{
+    margin-top: 3%;
+    width: 30%;
+    margin-left: 50%;
 }
 
 i{
@@ -28,6 +47,37 @@ header a{
     color: #ffffff;
     font-weight: bold;
 }
+
+header i:hover {
+    cursor: pointer;
+}
+
+.hide{
+    display: none;
+    background-color: #ffffff;
+
+}
+
+.hide nav{
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.hide a{
+    text-decoration: none;
+    font-size: 30px;
+    color: #000000;
+}
+
+.hide i{
+    color: #000000;
+}
+
+.hide1{
+    display: none;
+}
+
 
 
 main h1{
@@ -107,6 +157,8 @@ h3{
 
 }
 
+
+
 footer {
 
     background-color: #000000;
@@ -142,12 +194,39 @@ footer .liens_mentions{
     .img_main{
         height: 28em;
     }
+
+    .fa-bars{
+        font-size: 90px;
+
+
+    }
+
+    .hide1 i{
+        font-size: 90px;
+        margin-left: 35px;
+        margin-top: 50px;
+    }
 }
 
 @media screen and (min-width: 1024px){
     header{
         display: flex;
         font-size: 1.5em;
+    }
+
+    header img{
+        margin-top: 5%;
+        width: 17%;
+        height: auto;
+       margin-left: 68%;
+    }
+
+    .hide1 i{
+        margin-left: 40px;
+    }
+
+    .fa-bars{
+        margin-top: 5%;
     }
 
     .img_main{
@@ -184,6 +263,22 @@ footer .liens_mentions{
 
     header img {
         margin-top:2%;
+    }
+    header{
+        padding-bottom: 20px;
+    }
+
+    .hide1 i{
+        margin-left: 80px;
+        margin-top: 83px;
+    }
+
+    .hide nav{
+        display: inline-flex;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        text-align: center;
+        margin-left: 10%;
     }
 
     main h2{
